# pyheatrs

./: Cargo.toml  README.md  noxfile.py  pyproject.toml  requirements-lint.txt
presentation/: .gitignore  README.md  index.qmd
presentation/assets/: _quarto_language.yml  nav.scss
pyheatrs/: __init__.py  heat.py  main.py
src/: heat_shader.wgsl  lib.rs
tests/: test_heat.py
