[package]
name = "pyheatrs"
version = "0.1.0"
authors = ["Jørgen Nordmoen <jorgen@nordmoen.net>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyheatrs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"]}
numpy = "0.19"
ndarray = { version = "0.15", features = ["rayon"]}
