[package]
name = "pyheatrs"
version = "0.1.0"
authors = ["Jørgen Nordmoen <jorgen@nordmoen.net>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyheatrs"
crate-type = ["cdylib"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"]}
futures-intrusive = "0.5"
ndarray = { version = "0.15", features = ["rayon"]}
numpy = "0.19"
pollster = "0.3"
pyo3 = { version = "0.19", features = ["extension-module"]}
wgpu = "0.17"
