[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "pyheatrs"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy>=1.25", "matplotlib>=3.7"]

[project.scripts]
pyheatrs = "pyheatrs.main:main_cli"


[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F403", "F405"]
